--- a/index.html
+++ b/index.html
@@ -12,8 +12,25 @@
   </head>
   <body>
 <main>
+  <div class="grid-container">
+    <nav class="sidebar">
+      <p>Sidebar Sidebar Sidebar</p>
+      <p>Sidebar Sidebar Sidebar</p>
+      <p>Sidebar Sidebar Sidebar</p>
+      <p>Sidebar Sidebar Sidebar</p>
+      <p>Sidebar Sidebar Sidebar</p>
+      <p>Sidebar Sidebar Sidebar</p>
+
+    </nav>
+
+    <article class="articles">
+      <h1>Headline</h1>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p> 
+    </article>
+
+  </div>
 </main>
-<script src=https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js></script>
+<!--script src=https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js></script-->
 
 </body>
 </html>
