--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Raleway:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
-<main>
+<main id="main-doc">
   <div class="grid-container">
     <nav class="sidebar">
       <p>Sidebar Sidebar Sidebar</p>
@@ -23,14 +23,50 @@
 
     </nav>
 
-    <article class="articles">
-      <h1>Headline</h1>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p> 
-    </article>
+      <section class="main-section">
+        <header>
+          <h1>Declaring variables</h1>
+          <p>You can declare a variable in three ways:
+          </p>
+        </header>
+        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      </section>
+      <section class="main-section">
+        <header>
+          <h1>Declaring variables</h1>
+          <p>You can declare a variable in three ways:
+          </p>
+        </header>
+        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      </section>
+      <section class="main-section">
+        <header>
+          <h1>Declaring variables</h1>
+          <p>You can declare a variable in three ways:
+          </p>
+        </header>
+        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      </section>
+      <section class="main-section">
+        <header>
+          <h1>Declaring variables</h1>
+          <p>You can declare a variable in three ways:
+          </p>
+        </header>
+        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      </section>
+      <section class="main-section">
+        <header>
+          <h1>Declaring variables</h1>
+          <p>You can declare a variable in three ways:
+          </p>
+        </header>
+        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      </section>
 
   </div>
 </main>
-<!--script src=https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js></script-->
+<script src=https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js></script>
 
 </body>
 </html>
