--- a/index.html
+++ b/index.html
@@ -11,61 +11,71 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Raleway:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
-<main id="main-doc">
-  <div class="grid-container">
-    <nav class="sidebar">
-      <p>Sidebar Sidebar Sidebar</p>
-      <p>Sidebar Sidebar Sidebar</p>
-      <p>Sidebar Sidebar Sidebar</p>
-      <p>Sidebar Sidebar Sidebar</p>
-      <p>Sidebar Sidebar Sidebar</p>
-      <p>Sidebar Sidebar Sidebar</p>
+    <main class="grid-container" id="main-doc">
 
-    </nav>
+      <div class="sidebar">
+        <nav class="navigation" id="navbar">
+          <header><p>Technical Documentation for Python</p></header>
 
-      <section class="main-section">
-        <header>
-          <h1>Declaring variables</h1>
-          <p>You can declare a variable in three ways:
-          </p>
-        </header>
-        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      </section>
-      <section class="main-section">
-        <header>
-          <h1>Declaring variables</h1>
-          <p>You can declare a variable in three ways:
-          </p>
-        </header>
-        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      </section>
-      <section class="main-section">
-        <header>
-          <h1>Declaring variables</h1>
-          <p>You can declare a variable in three ways:
-          </p>
-        </header>
-        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      </section>
-      <section class="main-section">
-        <header>
-          <h1>Declaring variables</h1>
-          <p>You can declare a variable in three ways:
-          </p>
-        </header>
-        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      </section>
-      <section class="main-section">
-        <header>
-          <h1>Declaring variables</h1>
-          <p>You can declare a variable in three ways:
-          </p>
-        </header>
-        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      </section>
+            <a class="nav-link" href="#Introduction">Introduction</a>
+            <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+            <a class="nav-link" href="#Defining_functions">Defining functions</a>
+            <a class="nav-link" href="#Defining_classes">Defining classes</a>
+            <a class="nav-link" href="#Creating_modules">Creating modules</a>
+        </nav>
+      </div>
 
+      <div id="articles">
+      <section id="Introduction" class="main-section">
+      <header>
+        Introduction
+      </header>
+      <h2>Hello World!</h2>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      <li>First do <code>print("Hello world!")</code></li>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>  
+    </section>
+    <section id="Declaring_variables" class="main-section">
+      <header>
+        Declaring variables
+      </header>
+      <h2>Variables are useful</h2>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      <li>First do <code>a = 1</code></li>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
+    </section>
+    <section id="Defining_functions" class="main-section">
+      <header>
+        Defining functions
+      </header>
+      <h2>Functions are useful</h2>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      <li>First do <code>def myFunc(a, b):</code></li>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
+    </section>
+    <section id="Defining_classes" class="main-section">
+      <header>
+        Defining classes
+      </header>
+      <h2>Classes are useful</h2>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      <li>First do <code>class MyFunc():</code></li>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
+    </section>
+    <section id="Creating_modules" class="main-section">
+      <header>
+        Creating modules
+        </header>
+        <h2>Modules are useful</h2>
+        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+      <li>First do <code>print("Create module!")</code></li>
+      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
+    </section>
   </div>
+
 </main>
+
+
 <script src=https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js></script>
 
 </body>
