--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Raleway:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
-    <main class="grid-container" id="main-doc">
+    <main class="" id="main-doc">
 
       <div class="sidebar">
         <nav class="navigation" id="navbar">
-          <header><p>Technical Documentation for Python</p></header>
-
+          <header id="navheader"><p>Technical Documentation <br>for Python</p></header>
             <a class="nav-link" href="#Introduction">Introduction</a>
             <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
             <a class="nav-link" href="#Defining_functions">Defining functions</a>
@@ -26,57 +25,55 @@
       </div>
 
       <div id="articles">
-      <section id="Introduction" class="main-section">
-      <header>
-        Introduction
-      </header>
-      <h2>Hello World!</h2>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      <li>First do <code>print("Hello world!")</code></li>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>  
-    </section>
-    <section id="Declaring_variables" class="main-section">
-      <header>
-        Declaring variables
-      </header>
-      <h2>Variables are useful</h2>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      <li>First do <code>a = 1</code></li>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
-    </section>
-    <section id="Defining_functions" class="main-section">
-      <header>
-        Defining functions
-      </header>
-      <h2>Functions are useful</h2>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      <li>First do <code>def myFunc(a, b):</code></li>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
-    </section>
-    <section id="Defining_classes" class="main-section">
-      <header>
-        Defining classes
-      </header>
-      <h2>Classes are useful</h2>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      <li>First do <code>class MyFunc():</code></li>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
-    </section>
-    <section id="Creating_modules" class="main-section">
-      <header>
-        Creating modules
-        </header>
-        <h2>Modules are useful</h2>
-        <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
-      <li>First do <code>print("Create module!")</code></li>
-      <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
-    </section>
+        <div id="container">
+          <section id="Introduction" class="main-section">
+          <header>
+            Introduction
+          </header>
+          <h2>Hello World!</h2>
+          <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+          <li>First do <code>print("Hello world!")</code></li>
+          <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>  
+          </section>
+          <section id="Declaring_variables" class="main-section">
+          <header>
+            Declaring variables
+          </header>
+          <h2>Variables are useful</h2>
+          <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+          <li>First do <code>a = 1</code></li>
+          <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
+          </section>
+          <section id="Defining_functions" class="main-section">
+          <header>
+            Defining functions
+          </header>
+          <h2>Functions are useful</h2>
+          <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+          <li>First do <code>def myFunc(a, b):</code></li>
+          <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
+          </section>
+          <section id="Defining_classes" class="main-section">
+          <header>
+            Defining classes
+          </header>
+          <h2>Classes are useful</h2>
+          <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+          <li>First do <code>class MyFunc():</code></li>
+          <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
+          </section>
+          <section id="Creating_modules" class="main-section">
+          <header>
+            Creating modules
+            </header>
+            <h2>Modules are useful</h2>
+            <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
+          <li>First do <code>print("Create module!")</code></li>
+          <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>
+          </section>
+      </div>
   </div>
-
 </main>
-
-
 <script src=https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js></script>
-
 </body>
 </html>
