--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="container">
           <section id="Introduction" class="main-section">
           <header>
-            Introduction
+            <h1>Introduction</h1>
           </header>
           <h2>Hello World!</h2>
           <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
@@ -37,7 +37,7 @@
           </section>
           <section id="Declaring_variables" class="main-section">
           <header>
-            Declaring variables
+            <h1>Declaring variables</h1>
           </header>
           <h2>Variables are useful</h2>
           <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
@@ -46,7 +46,7 @@
           </section>
           <section id="Defining_functions" class="main-section">
           <header>
-            Defining functions
+            <h1>Defining functions</h1>
           </header>
           <h2>Functions are useful</h2>
           <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
@@ -55,7 +55,7 @@
           </section>
           <section id="Defining_classes" class="main-section">
           <header>
-            Defining classes
+            <h1>Defining classes</h1>
           </header>
           <h2>Classes are useful</h2>
           <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
@@ -64,7 +64,7 @@
           </section>
           <section id="Creating_modules" class="main-section">
           <header>
-            Creating modules
+            <h1>Creating modules</h1>
             </header>
             <h2>Modules are useful</h2>
             <p>Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text. Lots of text.</p>   
